[LBSE] Fix pattern related assertion failure in debug builds https://bugs.webkit.org/show_bug.cgi?id=268488

Reviewed by Rob Buis.

Fix incorrect cycle handling for pattern resources, not correctly taking
chained resource (href/xlink:href references) into account, leading to
the following assertion in debug builds in svg/custom/recursive-pattern.svg
and svg/custom/pattern-content-inheritance-cycle.svg.

Covered by existing tests.

Combined changes:
* LayoutTests/platform/glib/svg/custom/recursive-pattern-expected.png: Added.
* LayoutTests/platform/glib/svg/custom/recursive-pattern-expected.txt:
* LayoutTests/platform/ios/svg/custom/recursive-pattern-expected.txt:
* LayoutTests/platform/mac-sonoma-wk2-lbse-text/svg/custom/recursive-pattern-expected.png:
* LayoutTests/platform/mac-sonoma-wk2-lbse-text/svg/custom/recursive-pattern-expected.txt: Removed.
* LayoutTests/platform/mac-sonoma-wk2-pixel/svg/custom/recursive-pattern-expected.png: Removed.
* LayoutTests/platform/mac/svg/custom/recursive-pattern-expected.png:
* LayoutTests/platform/mac/svg/custom/recursive-pattern-expected.txt:
* LayoutTests/svg/custom/recursive-pattern.svg:
* Source/WebCore/rendering/svg/RenderSVGResourcePattern.cpp:
(WebCore::RenderSVGResourcePattern::prepareFillOperation):
(WebCore::RenderSVGResourcePattern::prepareStrokeOperation):
(WebCore::RenderSVGResourcePattern::createTileImage const):

Canonical link: https://commits.webkit.org/273944@main